# demotivator-bot

./: .gitignore  LICENSE  README.md  README_ru.MD  README_ru.md  main.py  pyproject.toml
bot/: __init__.py  __main__.py
bot/handlers/: general.py  media.py
bot/keyboards/: media.py
bot/utils/: album.py  degenerator.py
