[tool.poetry]
name = "demotivator-bot"
version = "0.2.0"
description = "Image processing bot that creates «demotivators» from given media. Based on aiogram and OpenCV."
authors = ["Daniel Kotofiev <nesclass@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.24"
Pillow = "^9.4.0"
opencv-python = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
